--- a/paper_2_word2vec.ipynb
+++ b/paper_2_word2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -20,7 +20,7 @@
       "text/plain": "     AnonID                            Query            QueryTime  ItemRank  \\\n0       479                       family guy  2006-03-01 16:01:20       NaN   \n1       479          also sprach zarathustra  2006-03-02 14:48:55       NaN   \n2       479      family guy movie references  2006-03-03 22:37:46       1.0   \n3       479  top grossing movies of all time  2006-03-03 22:42:42       1.0   \n4       479  top grossing movies of all time  2006-03-03 22:42:42       2.0   \n..      ...                              ...                  ...       ...   \n118     479                         nip tuck  2006-05-28 00:44:58       4.0   \n119     479                nip tuck season 4  2006-05-28 00:47:05       NaN   \n120     479            nip tuck season 3 dvd  2006-05-28 00:47:48       7.0   \n121     479            nip tuck season 3 dvd  2006-05-28 00:47:48       9.0   \n122     479            nip tuck season 3 dvd  2006-05-28 00:47:48       1.0   \n\n                          ClickURL  QueryFrequency  \\\n0                              NaN             191   \n1                              NaN               1   \n2    http://www.familyguyfiles.com               1   \n3              http://movieweb.com               2   \n4              http://www.imdb.com               2   \n..                             ...             ...   \n118         http://www.niptuck.com              24   \n119                            NaN               4   \n120        http://en.wikipedia.org               3   \n121      http://www.dvdtimes.co.uk               3   \n122        http://www.amazon.co.uk               3   \n\n                                           QueryTokens  \n0                                    ['family', 'guy']  \n1                    ['also', 'sprach', 'zarathustra']  \n2             ['family', 'guy', 'movie', 'references']  \n3    ['top', 'grossing', 'movies', 'of', 'all', 'ti...  \n4    ['top', 'grossing', 'movies', 'of', 'all', 'ti...  \n..                                                 ...  \n118                                    ['nip', 'tuck']  \n119                     ['nip', 'tuck', 'season', '4']  \n120              ['nip', 'tuck', 'season', '3', 'dvd']  \n121              ['nip', 'tuck', 'season', '3', 'dvd']  \n122              ['nip', 'tuck', 'season', '3', 'dvd']  \n\n[123 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>AnonID</th>\n      <th>Query</th>\n      <th>QueryTime</th>\n      <th>ItemRank</th>\n      <th>ClickURL</th>\n      <th>QueryFrequency</th>\n      <th>QueryTokens</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>479</td>\n      <td>family guy</td>\n      <td>2006-03-01 16:01:20</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>191</td>\n      <td>['family', 'guy']</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>479</td>\n      <td>also sprach zarathustra</td>\n      <td>2006-03-02 14:48:55</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>['also', 'sprach', 'zarathustra']</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>479</td>\n      <td>family guy movie references</td>\n      <td>2006-03-03 22:37:46</td>\n      <td>1.0</td>\n      <td>http://www.familyguyfiles.com</td>\n      <td>1</td>\n      <td>['family', 'guy', 'movie', 'references']</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>479</td>\n      <td>top grossing movies of all time</td>\n      <td>2006-03-03 22:42:42</td>\n      <td>1.0</td>\n      <td>http://movieweb.com</td>\n      <td>2</td>\n      <td>['top', 'grossing', 'movies', 'of', 'all', 'ti...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>479</td>\n      <td>top grossing movies of all time</td>\n      <td>2006-03-03 22:42:42</td>\n      <td>2.0</td>\n      <td>http://www.imdb.com</td>\n      <td>2</td>\n      <td>['top', 'grossing', 'movies', 'of', 'all', 'ti...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>118</th>\n      <td>479</td>\n      <td>nip tuck</td>\n      <td>2006-05-28 00:44:58</td>\n      <td>4.0</td>\n      <td>http://www.niptuck.com</td>\n      <td>24</td>\n      <td>['nip', 'tuck']</td>\n    </tr>\n    <tr>\n      <th>119</th>\n      <td>479</td>\n      <td>nip tuck season 4</td>\n      <td>2006-05-28 00:47:05</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>4</td>\n      <td>['nip', 'tuck', 'season', '4']</td>\n    </tr>\n    <tr>\n      <th>120</th>\n      <td>479</td>\n      <td>nip tuck season 3 dvd</td>\n      <td>2006-05-28 00:47:48</td>\n      <td>7.0</td>\n      <td>http://en.wikipedia.org</td>\n      <td>3</td>\n      <td>['nip', 'tuck', 'season', '3', 'dvd']</td>\n    </tr>\n    <tr>\n      <th>121</th>\n      <td>479</td>\n      <td>nip tuck season 3 dvd</td>\n      <td>2006-05-28 00:47:48</td>\n      <td>9.0</td>\n      <td>http://www.dvdtimes.co.uk</td>\n      <td>3</td>\n      <td>['nip', 'tuck', 'season', '3', 'dvd']</td>\n    </tr>\n    <tr>\n      <th>122</th>\n      <td>479</td>\n      <td>nip tuck season 3 dvd</td>\n      <td>2006-05-28 00:47:48</td>\n      <td>1.0</td>\n      <td>http://www.amazon.co.uk</td>\n      <td>3</td>\n      <td>['nip', 'tuck', 'season', '3', 'dvd']</td>\n    </tr>\n  </tbody>\n</table>\n<p>123 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 57,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from gensim.models import Word2Vec\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "from gensim.models import KeyedVectors\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Input: AOL dataset: Q; Completion List: L; Current Session Queries List: C;\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "from nltk.tokenize import word_tokenize\n",
@@ -240,7 +240,7 @@
     "\n",
     "\n",
     "# Query auto-completion function\n",
-    "def query_completion(query, completion_list, session_queries, alpha=0.5):\n",
+    "def query_completion(query, completion_list, session_queries, alpha=0.6):\n",
     "    N = len(session_queries)\n",
     "    gamma = beta = 1/(N+1)\n",
     "    omega = 0.5\n",
@@ -251,8 +251,10 @@
     "    # Semantic similarity score\n",
     "    # Use average similarity score on words (average of all word pairs)\n",
     "    similarity_score = []\n",
-    "    for candidate_query in tqdm(completion_list, desc='Calculating semantic similarity score'):\n",
+    "    # for candidate_query in tqdm(completion_list, desc='Calculating semantic similarity score'):\n",
+    "    for candidate_query in completion_list:\n",
     "        score = 0\n",
+    "\n",
     "        for session_query in session_queries:\n",
     "            google_model_score = 0\n",
     "            AOL_model_score = 0\n",
@@ -384,10 +386,10 @@
    ],
    "source": [
     "# Test word2vec similarity with wmdistance, higher score means less similar\n",
-    "doc1 = word_tokenize(\"car\")\n",
-    "doc2 = word_tokenize(\"cartoon network\")\n",
-    "google_model.wmdistance(doc1, doc2)\n",
-    "AOL_model.wv.wmdistance(doc1, doc2)"
+    "# doc1 = word_tokenize(\"car\")\n",
+    "# doc2 = word_tokenize(\"cartoon network\")\n",
+    "# google_model.wmdistance(doc1, doc2)\n",
+    "# AOL_model.wv.wmdistance(doc1, doc2)"
    ],
    "metadata": {
     "collapsed": false
@@ -414,10 +416,197 @@
     }
    ],
    "source": [
-    "# Test idf scores for words\n",
+    "# Test idf scores for words (higher score means less frequent)\n",
     "print(idf_scores.loc[idf_scores.index == 'car', 'IDF'])\n",
     "print(idf_scores.loc[idf_scores.index == 'the', 'IDF'])\n",
     "print(idf_scores.loc[idf_scores.index == 'what', 'IDF'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "# MRR (Mean Reciprocal Rank) evaluation\n",
+    "def RR(ranked_completions, ground_truth):\n",
+    "    \"\"\"\n",
+    "    Reciprocal Rank (RR) for one query.\n",
+    "    :param ranked_completions: list of suggested completions (higher rank first)\n",
+    "    :param ground_truth: the correct suggestion of the query\n",
+    "    :return: the RR score\n",
+    "    \"\"\"\n",
+    "    for i, completion in enumerate(ranked_completions):\n",
+    "        if completion == ground_truth:\n",
+    "            return 1.0 / (i + 1)\n",
+    "    return 0.0\n",
+    "\n",
+    "def MRR(completion_lists, ground_truths):\n",
+    "    \"\"\"\n",
+    "    Mean of scores for entire dataset.\n",
+    "    \"\"\"\n",
+    "    total_score = 0.0\n",
+    "    for i, completion_list in enumerate(completion_lists):\n",
+    "        total_score += RR(completion_list, ground_truths[i])\n",
+    "\n",
+    "    return total_score / len(completion_lists)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset size:  2709614 queries\n",
+      "Test dataset size:  262547 sessions and 904763 queries\n",
+      "First 10 sessions in test dataset: \n",
+      "[['-', '-', '-', '-'], ['myspace.com'], ['pet sitter in newburyport ma', 'pet sitter in newburyport ma'], ['undefined'], ['shakira lyrics'], ['ebay', 'social security'], ['glutes', 'glutes', 'glutes', 'glutes', 'glutes', 'adultfriendfinder'], ['sandals vacations'], ['www.delta.com'], ['costco']]\n",
+      "Session lengths in test dataset: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "1      113402\n2       51078\n3       28311\n4       17455\n5       11957\n        ...  \n122         1\n138         1\n183         1\n162         1\n150         1\nLength: 141, dtype: int64"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train and test datasets (arrays of query sessions, sorted by time increasing)\n",
+    "with open('data/train.pkl', 'rb') as f:\n",
+    "    train = pkl.load(f)\n",
+    "\n",
+    "with open('data/test.pkl', 'rb') as f:\n",
+    "    test = pkl.load(f)\n",
+    "\n",
+    "# Flatten train dataset\n",
+    "train = [query for session in train for query in session]\n",
+    "train = pd.DataFrame(train, columns=['Query'])\n",
+    "\n",
+    "print(\"Train dataset size: \", len(train), \"queries\")\n",
+    "print(\"Test dataset size: \", len(test), \"sessions and\", len([query for session in test for query in session]), \"queries\")\n",
+    "print(\"First 10 sessions in test dataset: \")\n",
+    "print(test[:10])\n",
+    "# Session lengths counts\n",
+    "print(\"Session lengths in test dataset: \")\n",
+    "pd.Series([len(session) for session in test]).value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lengths of last session query in test dataset: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "11     13606\n13     13606\n15     13344\n14     12976\n12     12928\n       ...  \n131        1\n112        1\n229        1\n319        1\n304        1\nLength: 208, dtype: int64"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lengths of last session query in test dataset (with counts)\n",
+    "print(\"Lengths of last session query in test dataset: \")\n",
+    "pd.Series([session[-1] for session in test]).apply(len).value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [],
+   "source": [
+    "def get_completions(sessions, prefix_length, train_df, alpha=0.6):\n",
+    "    completion_lists = []\n",
+    "    ground_truths = []\n",
+    "\n",
+    "    for session in tqdm(sessions, desc='Generating completions'):\n",
+    "        query_ground_truth = session[-1]\n",
+    "\n",
+    "        # Skip if the query is shorter than the prefix length\n",
+    "        if len(query_ground_truth) < prefix_length:\n",
+    "            continue\n",
+    "\n",
+    "        previous_queries = session[:-1] if len(session) > 1 else []\n",
+    "\n",
+    "        # Get prefix (part of the query that needs to be completed)\n",
+    "        query_tokenized = word_tokenize(query_ground_truth)\n",
+    "        query_prefix = ' '.join(query_tokenized[:prefix_length])\n",
+    "\n",
+    "        # Get completions\n",
+    "        completions = train_df[train_df['Query'].str.startswith(query_prefix)]['Query'].unique()\n",
+    "\n",
+    "        # Re-rank completions\n",
+    "        ranked_completions = query_completion(query_prefix, completions, previous_queries, alpha)\n",
+    "\n",
+    "        completion_lists.append(ranked_completions)\n",
+    "        ground_truths.append(query_ground_truth)\n",
+    "\n",
+    "    return completion_lists, ground_truths\n",
+    "\n",
+    "def evaluate_test_set(test, prefix_length, alpha=0.6):\n",
+    "    completion_lists, ground_truths = get_completions(test, prefix_length, train, alpha)\n",
+    "    mrr = MRR(completion_lists, ground_truths)\n",
+    "    return mrr"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating completions: 100%|██████████| 11/11 [01:08<00:00,  6.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR for prefix length 2 : 0.7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the test set\n",
+    "prefix_length = 2\n",
+    "mrr = evaluate_test_set(test[:11], prefix_length)\n",
+    "print(\"MRR for prefix length\", prefix_length, \":\", mrr)"
    ],
    "metadata": {
     "collapsed": false
