MRR bug for prefix length, fixed

--- a/paper_2_word2vec.ipynb
+++ b/paper_2_word2vec.ipynb
@@ -544,16 +544,18 @@
     "    ground_truths = []\n",
     "\n",
     "    for session in tqdm(sessions, desc='Generating completions'):\n",
+    "        # Last query in the session is the query we want to complete\n",
     "        query_ground_truth = session[-1]\n",
+    "        query_tokenized = word_tokenize(query_ground_truth)\n",
     "\n",
     "        # Skip if the query is shorter than the prefix length\n",
-    "        if len(query_ground_truth) < prefix_length:\n",
+    "        if len(query_tokenized) < prefix_length:\n",
     "            continue\n",
     "\n",
+    "        # Queries preceding the last query in the session\n",
     "        previous_queries = session[:-1] if len(session) > 1 else []\n",
     "\n",
     "        # Get prefix (part of the query that needs to be completed)\n",
-    "        query_tokenized = word_tokenize(query_ground_truth)\n",
     "        query_prefix = ' '.join(query_tokenized[:prefix_length])\n",
     "\n",
     "        # Get completions\n",
@@ -604,7 +606,7 @@
    ],
    "source": [
     "# Evaluate the test set\n",
-    "prefix_length = 2\n",
+    "prefix_length = 2   # query will be completed based on the first 2 words\n",
     "mrr = evaluate_test_set(test[:11], prefix_length)\n",
     "print(\"MRR for prefix length\", prefix_length, \":\", mrr)"
    ],
