Edit to create session for each 3 consecutive queries

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
        "[603 rows x 8 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[603 rows x 1 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[603 rows x 1 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +456,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -643,7 +643,7 @@
        "[603 rows x 3 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -673,7 +673,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating sessions: 603it [00:00, 17929.59it/s]"
+      "Creating sessions:   0%|          | 0/201 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating sessions: 100%|██████████| 201/201 [00:00<00:00, 2249.32it/s]"
      ]
     },
     {
@@ -681,16 +688,21 @@
      "output_type": "stream",
      "text": [
       "First 10 sessions:\n",
-      "['How did paul die from fast in the fouris']\n",
-      "['Fire belly toad']\n",
-      "['Now im stressed out']\n",
-      "['fast in the fouris']\n",
-      "['How many phones sell in a day']\n",
-      "['How long do toads live']\n",
-      "['amozan']\n",
-      "['Fast and the ferious']\n",
-      "[\"Dominic's early life in fast an ferious\"]\n",
-      "['what is a cheeta']\n"
+      "['How did paul die from fast in the fouris', 'Fire belly toad', 'Now im stressed out']\n",
+      "['fast in the fouris', 'How many phones sell in a day', 'How long do toads live']\n",
+      "['amozan', 'Fast and the ferious', \"Dominic's early life in fast an ferious\"]\n",
+      "['what is a cheeta', 'The song at the end of the fast and ferious 7 movie', 'The Fast and ferious 7 movie']\n",
+      "['When is the Fast and ferious 9 coming in theaters', 'hew was the 2nd president', 'movies for to day at the edwads movie theater']\n",
+      "['Who is the voice of rupnnzel', 'tortoises', 'Hey I just met you']\n",
+      "['Jurassic world', 'How many langenges was Jurassic world made in', 'TTM']\n",
+      "['Google classroom', '23rd president', 'cute girls hairstyles']\n",
+      "['pintrest', 'Fantastic hair doos', 'Character from monster high']\n",
+      "['example of a leamer', 'taler swift', 'monster high move boo york boo york']\n",
+      "['why does the poler bear have white fur', 'Whoh played Ioin hide from transformers', 'how the chetta has spots']\n",
+      "['florider', 'tranksformers moviey', 'When is the new ghost busters comeing out']\n",
+      "['spelling lity', 'cool math', 'armer games']\n",
+      "['who plays esan in the movie', 'is sloth the laziest animal', 'selelena gomez songs']\n",
+      "['frozen full movie online', 'when is Selena gomez new songs are coming out', 'google classroom']\n"
      ]
     },
     {
@@ -706,22 +718,41 @@
     "\n",
     "sessions = []\n",
     "\n",
-    "for index, row in tqdm(df.iterrows(), desc='Creating sessions'):\n",
+    "df['user'] = (df.index // 3) + 1\n",
+    "\n",
+    "grouped = df.groupby('user')\n",
+    "\n",
+    "for user, group in tqdm(grouped, desc='Creating sessions'):\n",
     "    session = []\n",
-    "    session.append(row['Query'])\n",
+    "    prev_user = group['user'].iloc[0]\n",
+    "\n",
+    "    for i, row in group.iterrows():\n",
+    "        if row['user'] != prev_user:\n",
+    "            session.append(row['Query'])\n",
+    "            session = [row['Query']]\n",
+    "        else:\n",
+    "            session.append(row['Query'])\n",
+    "            # sessions.append(session)\n",
+    "            # session = [row['Query']]\n",
+    "\n",
+    "        prev_user = row['user']\n",
+    "\n",
     "    sessions.append(session)\n",
+    "    # session = []\n",
+    "    # session.append(row['Query'])\n",
+    "    # sessions.append(session)\n",
     "\n",
     "with open('data/children-sessions.pkl', 'wb') as f:\n",
     "    pkl.dump(sessions, f)\n",
     "\n",
     "print(\"First 10 sessions:\")\n",
-    "for i in range(10):\n",
+    "for i in range(15):\n",
     "    print(sessions[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -742,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -769,6 +800,7 @@
        "      <th>Query</th>\n",
        "      <th>QueryFrequency</th>\n",
        "      <th>QueryTokens</th>\n",
+       "      <th>user</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -777,33 +809,39 @@
        "      <td>How did paul die from fast in the fouris</td>\n",
        "      <td>1</td>\n",
        "      <td>[How, did, paul, die, from, fast, in, the, fou...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Fire belly toad</td>\n",
        "      <td>1</td>\n",
        "      <td>[Fire, belly, toad]</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Now im stressed out</td>\n",
        "      <td>1</td>\n",
        "      <td>[Now, im, stressed, out]</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>fast in the fouris</td>\n",
        "      <td>1</td>\n",
        "      <td>[fast, in, the, fouris]</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>How many phones sell in a day</td>\n",
        "      <td>1</td>\n",
        "      <td>[How, many, phones, sell, in, a, day]</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -813,34 +851,39 @@
        "      <td>superbowl sunday?</td>\n",
        "      <td>1</td>\n",
        "      <td>[superbowl, sunday, ?]</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>599</th>\n",
        "      <td>superhry cz</td>\n",
        "      <td>1</td>\n",
        "      <td>[superhry, cz]</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>600</th>\n",
        "      <td>superior motors</td>\n",
        "      <td>1</td>\n",
        "      <td>[superior, motors]</td>\n",
+       "      <td>201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>601</th>\n",
        "      <td>supporta Java oppure</td>\n",
        "      <td>1</td>\n",
        "      <td>[supporta, Java, oppure]</td>\n",
+       "      <td>201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>602</th>\n",
        "      <td>supreme ventures jamaica lottery results</td>\n",
        "      <td>1</td>\n",
        "      <td>[supreme, ventures, jamaica, lottery, results]</td>\n",
+       "      <td>201</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>603 rows × 3 columns</p>\n",
+       "<p>603 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -857,23 +900,23 @@
        "601                      supporta Java oppure               1   \n",
        "602  supreme ventures jamaica lottery results               1   \n",
        "\n",
-       "                                           QueryTokens  \n",
-       "0    [How, did, paul, die, from, fast, in, the, fou...  \n",
-       "1                                  [Fire, belly, toad]  \n",
-       "2                             [Now, im, stressed, out]  \n",
-       "3                              [fast, in, the, fouris]  \n",
-       "4                [How, many, phones, sell, in, a, day]  \n",
-       "..                                                 ...  \n",
-       "598                             [superbowl, sunday, ?]  \n",
-       "599                                     [superhry, cz]  \n",
-       "600                                 [superior, motors]  \n",
-       "601                           [supporta, Java, oppure]  \n",
-       "602     [supreme, ventures, jamaica, lottery, results]  \n",
+       "                                           QueryTokens  user  \n",
+       "0    [How, did, paul, die, from, fast, in, the, fou...     1  \n",
+       "1                                  [Fire, belly, toad]     1  \n",
+       "2                             [Now, im, stressed, out]     1  \n",
+       "3                              [fast, in, the, fouris]     2  \n",
+       "4                [How, many, phones, sell, in, a, day]     2  \n",
+       "..                                                 ...   ...  \n",
+       "598                             [superbowl, sunday, ?]   200  \n",
+       "599                                     [superhry, cz]   200  \n",
+       "600                                 [superior, motors]   201  \n",
+       "601                           [supporta, Java, oppure]   201  \n",
+       "602     [supreme, ventures, jamaica, lottery, results]   201  \n",
        "\n",
-       "[603 rows x 3 columns]"
+       "[603 rows x 4 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +947,7 @@
        "Name: QueryTokens, Length: 603, dtype: object"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1037,7 +1080,7 @@
        "[1132 rows x 2 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
